--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: PHOTORAMA
+title: pixelartist_mr
 email: ""
 description: "Photo Journal"
 url: "https://ashuthosh-mr.github.io"
