--- a/_config.yml
+++ b/_config.yml
@@ -4,21 +4,21 @@ email: ""
 description: "Photo Journal"
 url: "https://ashuthosh-mr.github.io"
 baseurl: "/pixelartist_mr"
-facebook_username: ""
-twitter_username: ""
-instagram_username: ""
-github_username:  ""
-deviantart_username: ""
-flickr_username: ""
-discus_shortname: ""
+#facebook_username: ""
+#twitter_username: ""
+#instagram_username: ""
+#github_username:  ""
+#deviantart_username: ""
+#flickr_username: ""
+#discus_shortname: ""
 share: true
 
 # Owner/author information
 owner:
-  name:   photorama
-  avatar: avatar.png
+  name:   Ashuthosh
+  avatar: logo.png
   favicon: favicon.ico
-  info: photography website template
+  info: 
 
 # Settings for comments helper
 # Set 'provider' to the comment provider you want to use. (i.e.  Disqus, Intense Debate, livefyre, or Facebook Comments)
