--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: pixelartist_mr
 email: ""
 description: "Photo Journal"
-url: "https://ashuthosh-mr.github.io"
-baseurl: "/pixelartist_mr"
+url: "https://ashuthosh.de"
+baseurl: ""
 #facebook_username: ""
 #twitter_username: ""
 #instagram_username: ""
