--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,13 @@ comments :
 
 # Internal nav
 nav:
-  - GALLERY: "https://ashuthosh-mr.github.io/pixelartist_mr/gallery/"  
-  - JOURNAL: "https://ashuthosh-mr.github.io/pixelartist_mr/journal/"
-  - ABOUT: "https://ashuthosh-mr.github.io/pixelartist_mr/about/"
+  - GALLERY: "https://ashuthosh.de/gallery/"  
+  - JOURNAL: "https://ashuthosh.de/journal/"
+  - ABOUT: "https://ashuthosh.de/about/"
+  
+ # - GALLERY: "https://ashuthosh-mr.github.io/pixelartist_mr/gallery/"  
+ # - JOURNAL: "https://ashuthosh-mr.github.io/pixelartist_mr/journal/"
+ # - ABOUT: "https://ashuthosh-mr.github.io/pixelartist_mr/about/"
 
 # All translation keys
 translations:
